# tsumiki

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  compose.yaml  pyproject.toml
THIRD_PARTY_LICENSES/AgentSquare/: README.md
docs/: agent_reuse_verification_plan.md  agentsquare_vendoring.md  zenn_article_part1_2026-06-11.md  zenn_article_part2_2026-06-11.md  zenn_draft_2026-06-10.md
docs/experiments/: phase1_baseline_v0_2026-06-08.md  phase1_baseline_v1_2026-06-08.md  phase1_dryrun_2026-06-08.md  phase1_p4_v0.4.0_2026-06-10.md  phase1_p5_a_v0.5.0_2026-06-10.md  phase1_prompt_iterations.md  phase2_azure_gpt5_4_3seeds_2026-06-10.md  phase2_azure_negative_transfer_review_2026-06-10.md  phase2_azure_negative_transfer_review_results_2026-06-10.md  phase2_baseline_v0_2026-06-10.md  phase2_negative_transfer_review_2026-06-10.md  phase2_negative_transfer_review_results_2026-06-10.md  phase2_smoke_2026-06-09.md  phase3_robustness_2026-06-10.md  phase4_hybrid_2026-06-10.md  phase5a_ablation_2026-06-19.md  phase5a_design.md  phase5b_design.md  phase5b_skills_2026-06-19.md  phase5c_design.md  phase5c_e2e_2026-06-19.md  phase6_design.md  phase6_e2e_2026-06-19.md  phase7_design.md  phase7a_agentsquare_2026-06-19.md  phase7b_packaging_2026-06-19.md  phase7bonus3_cli_overrides_2026-06-19.md  phase7c_examples_2026-06-19.md  phase7d_provider_and_generator_2026-06-19.md  phase7e_design.md  (+14 more)
experiments/: aggregate_phase1_seeds.py  aggregate_phase2_seeds.py  aggregate_phase3_robustness.py  aggregate_phase5a.py  build_clean_clauses.py  build_iso27001_clean_clauses.py  build_nda_skills.py  build_phase5a_variants.py  extract_negative_transfer_review.py  generate_hybrid_dictionary.py  run_phase1_dryrun.py  run_phase2_dryrun.py  run_phase5c_dryrun.py  run_phase9f_open_ended.py  seed_iso27001_evaluator.py  seed_nda_evaluator.py  test_phase6_generator.py
scripts/: check_nda_templates.py  pull_models.sh  start_ollama.sh
tests/: test_extract.py  test_goal_generator.py  test_goal_lookup.py  test_goal_parser.py  test_goal_specs.py  test_goal_store.py  test_guardrails.py  test_metrics.py  test_mlflow_logger.py  test_modification.py  test_ng_detector.py  test_ng_modifier.py  test_ng_patterns.py  test_phase7b_packaging.py  test_phase7bonus3_llm_overrides.py  test_phase7c_examples.py  test_phase7d_llm_provider.py  test_phase7e3_agentsquare_search.py  test_phase7e4_compose.py  test_phase7e5_evaluator_gate.py  test_phase7e6_use_compose.py  test_phase7e_agentsquare.py  test_phase9a_task_specs.py  test_phase9b_dialog.py  test_phase9c_dialog_generator.py  test_phase9d_sample_judgment.py  test_phase9e_open_ended_e2e.py  test_pipeline.py  test_reasoning_model.py  test_runner_phase1.py  test_runner_phase2.py  test_segment.py  test_skills_loader.py  test_smoke.py  test_sources_catalog.py  test_split.py  test_synthesis.py
(+168 files in other folders)
