[project]
name = "tsumiki"
version = "0.0.1"
description = "再利用可能な部品を合成するタスク実行エージェント自動生成の最小検証"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "openai>=1.55,<2.0",
    "python-dotenv>=1.0,<2.0",
    "mlflow>=2.18,<3.0",
    "dspy-ai>=2.5,<3.0",
    "pydantic>=2.9,<3.0",
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0.3",
    "python-docx>=1.2.0",
    "pypdf>=6.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7,<1.0",
    "pytest>=8.3,<9.0",
    "pyright>=1.1.380,<2.0",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsumiki"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
include = ["src", "tests", "experiments"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
